test/parsing/ferguson/reserved-owned.good
reserved-owned.chpl:1: error: attempt to redefine reserved type 'owned'
reserved-owned.chpl:3: error: attempt to redefine reserved type 'owned'
reserved-owned.chpl:6: error: attempt to redefine reserved type 'owned'
reserved-owned.chpl:7: error: attempt to redefine reserved type 'owned'
reserved-owned.chpl:10: error: attempt to redefine reserved type 'owned'
reserved-owned.chpl:12: error: attempt to redefine reserved type 'owned'
reserved-owned.chpl:17: error: attempt to redefine reserved type 'owned'
